Commit 1: Fixed Main Title Alignment.

--- a/toolkit/static/custom.css
+++ b/toolkit/static/custom.css
@@ -53,9 +53,10 @@ h1 {
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 700;
-    letter-spacing: 4rem;
+    letter-spacing: 3.5vw;
+    text-indent: 3.5vw;
 }
 
 h3 {
